--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body{
   display: flex;
-  margin-top: -90px;
+  margin-top: 10px;
 }
 
 section {
@@ -121,7 +121,7 @@ h1.black-text {
 
 p {
   color: aliceblue;
-  margin: -5px 30px 10px 30px;
+  margin: 0 30px 10px 30px;
   padding: 10px;
   border: solid 2px white;
 }
