--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ section {
   background-color: white;
   width: 100%;
   height: 110vh;
+  margin-top: 20px;
   display: flex; /* Usamos flexbox para centrar el contenido */
   justify-content: center; /* Centra horizontalmente */
   align-items: center; /* Centra verticalmente */
