--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,13 @@
 
 body{
   display: flex;
-  margin-top: -100px;
+  margin-top: -10px;
 }
 
 section {
   background-color: white;
   width: 100%;
-  height: 110vh;
-  margin-top: 70px;
+  height: 113vh;
   display: flex; /* Usamos flexbox para centrar el contenido */
   justify-content: center; /* Centra horizontalmente */
   align-items: center; /* Centra verticalmente */
@@ -159,4 +158,10 @@ p.visible {
   } 100% {
     scale: 1.1; opacity: 0.5;
   }
+}
+
+#musica {
+  opacity: .7;
+  margin: 0;
+  animation:parpadeo2 15s 0 ease-in-out alternate;
 }
